--- a/lib/css/laslesvpn.css
+++ b/lib/css/laslesvpn.css
@@ -7,6 +7,10 @@ p {
   color: #4f5665;
 }
 
+i {
+  color: #f53838;
+}
+
 h1,
 h2,
 h3,
@@ -551,11 +555,22 @@ ul.slick-dots li {
 }
 .footer .container--footer .container--footer__society .ft--society__network {
   padding-bottom: 20px;
+  display: flex;
 }
-.footer .container--footer .container--footer__society .ft--society__network img {
-  background: #f53838;
+.footer .container--footer .container--footer__society .ft--society__network .ft--ti {
+  width: 33px;
+  height: 33px;
+  background: #ffff;
   box-shadow: 0px 13px 18px rgba(17, 19, 35, 0.08);
   border-radius: 50%;
+  text-align: center;
+  margin-left: 20px;
+}
+.footer .container--footer .container--footer__society .ft--society__network .ft--ti a {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 .footer .container--footer .container--footer__society h3 {
   font-style: normal;
