--- a/lib/css/laslesvpn.scss
+++ b/lib/css/laslesvpn.scss
@@ -5,6 +5,9 @@ p {
   margin: 0;
   color: #4f5665;
 }
+i{
+  color: #f53838;
+}
 h1,
 h2,
 h3,
@@ -577,10 +580,23 @@ ul.slick-dots li {
       }
       .ft--society__network {
         padding-bottom: 20px;
-        img {
-          background: #f53838;
+        display: flex;
+        
+        .ft--ti{
+          width: 33px;
+          height: 33px;
+          background: #ffff;
           box-shadow: 0px 13px 18px rgba(17, 19, 35, 0.08);
           border-radius: 50%;
+          text-align: center;
+          margin-left: 20px;
+          a {
+            display: flex;
+            height: 100%;
+            align-items: center;
+            justify-content: center;
+          }
+
         }
       }
       h3 {
