--- a/lib/css/laslesvpn.css
+++ b/lib/css/laslesvpn.css
@@ -564,7 +564,10 @@ ul.slick-dots li {
   box-shadow: 0px 13px 18px rgba(17, 19, 35, 0.08);
   border-radius: 50%;
   text-align: center;
-  margin-left: 20px;
+  margin-right: 20px;
+}
+.footer .container--footer .container--footer__society .ft--society__network .ft--ti:last-child {
+  margin-right: 0;
 }
 .footer .container--footer .container--footer__society .ft--society__network .ft--ti a {
   display: flex;
