--- a/lib/css/laslesvpn.scss
+++ b/lib/css/laslesvpn.scss
@@ -589,7 +589,10 @@ ul.slick-dots li {
           box-shadow: 0px 13px 18px rgba(17, 19, 35, 0.08);
           border-radius: 50%;
           text-align: center;
-          margin-left: 20px;
+          margin-right: 20px;
+          &:last-child{
+            margin-right: 0;
+          }
           a {
             display: flex;
             height: 100%;
