--- a/lib/css/laslesvpn.css
+++ b/lib/css/laslesvpn.css
@@ -441,9 +441,10 @@ button.slick-prev.slick-arrow {
   right: 230px;
   background: #ffff;
   border-radius: 50%;
-  padding: 20px;
+  padding: 18px;
   color: #f53838;
   border: 2px solid #f53838;
+  font-size: 20px;
 }
 button.slick-prev.slick-arrow:hover {
   background: #f53838;
@@ -456,9 +457,10 @@ button.slick-next.slick-arrow {
   right: 150px;
   background: #ffff;
   border-radius: 50%;
-  padding: 20px;
+  padding: 18px;
   color: #f53838;
   border: 2px solid #f53838;
+  font-size: 20px;
 }
 button.slick-next.slick-arrow:hover {
   background: #f53838;
